# APSDigitalTwin

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  concat.py  constants.py  genetic.py  get_initial_values.py  get_peaks.py  main.py  model.py  new_successful_attacks.json  openaps.py  prevent_patient_ids.py  pyproject.toml  requirements.txt  scenario.py
data/: concat.py  data_processing.py  redacted.txt
data/example_oref0_data/: suggested.json
data/example_oref0_data/profiles/: profile_120.json  profile_140.json  profile_80.json
scripts/: abstract_data_generator.py  ctrl_trt_data_generator.py  fault_finder.py  fitness_checker.py  fuzz_data_generator.py  get_fault_times.py  get_times.py  intervention_distributions.py  main.py  openaps.py  result_checker.py  rq1.1_model_comparison.py  rq1_model_correctness.py  rq2.py  rq2_model_prediction.py  rq2_person_glucose_dynamics.py  rq3.1_timing.py  rq3_openaps_scenarios.py  rqX_model_correctness_mutidata.py  rqX_model_prediction.py  scenario.py  setup.py  successful_attacks.py
scripts/aps_digitaltwin/: annealing.py  fitness_functions.py  genetic.py  model.py  openaps.py  scenario.py  swarm.py  util.py
